@@ -51,14 +51,17 @@ import org.opencastproject.mediapackage.Track;
 import org.opencastproject.mediapackage.VideoStream;
 import org.opencastproject.mediapackage.selector.AbstractMediaPackageElementSelector;
 import org.opencastproject.mediapackage.selector.TrackSelector;
+import org.opencastproject.serviceregistry.api.ServiceRegistry;
 import org.opencastproject.util.JobUtil;
 import org.opencastproject.util.MimeTypes;
 import org.opencastproject.util.PathSupport;
 import org.opencastproject.util.UnknownFileTypeException;
 import org.opencastproject.util.data.Collections;
 import org.opencastproject.workflow.api.AbstractWorkflowOperationHandler;
+import org.opencastproject.workflow.api.ConfiguredTagsAndFlavors;
 import org.opencastproject.workflow.api.WorkflowInstance;
 import org.opencastproject.workflow.api.WorkflowOperationException;
+import org.opencastproject.workflow.api.WorkflowOperationHandler;
 import org.opencastproject.workflow.api.WorkflowOperationInstance;
 import org.opencastproject.workflow.api.WorkflowOperationResult;
 import org.opencastproject.workflow.api.WorkflowOperationResult.Action;
@@ -69,7 +72,6 @@ import com.entwinemedia.fn.Fn2;
 import com.entwinemedia.fn.Fx;
 import com.entwinemedia.fn.P2;
 import com.entwinemedia.fn.Prelude;
-import com.entwinemedia.fn.Stream;
 import com.entwinemedia.fn.StreamFold;
 import com.entwinemedia.fn.data.Opt;
 import com.entwinemedia.fn.fns.Strings;
@@ -78,6 +80,8 @@ import com.entwinemedia.fn.parser.Parsers;
 import com.entwinemedia.fn.parser.Result;
 
 import org.apache.commons.io.FilenameUtils;
+import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.Reference;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -91,18 +95,21 @@ import java.util.stream.Collectors;
 /**
  * The workflow definition for handling "image" operations
  */
+@Component(
+    immediate = true,
+    service = WorkflowOperationHandler.class,
+    property = {
+        "service.description=Image Workflow Operation Handler",
+        "workflow.operation=image"
+    }
+)
 public class ImageWorkflowOperationHandler extends AbstractWorkflowOperationHandler {
   /** The logging facility */
   private static final Logger logger = LoggerFactory.getLogger(ImageWorkflowOperationHandler.class);
 
   // legacy option
-  public static final String OPT_SOURCE_FLAVOR = "source-flavor";
-  public static final String OPT_SOURCE_FLAVORS = "source-flavors";
-  public static final String OPT_SOURCE_TAGS = "source-tags";
   public static final String OPT_PROFILES = "encoding-profile";
   public static final String OPT_POSITIONS = "time";
-  public static final String OPT_TARGET_FLAVOR = "target-flavor";
-  public static final String OPT_TARGET_TAGS = "target-tags";
   public static final String OPT_TARGET_BASE_NAME_FORMAT_SECOND = "target-base-name-format-second";
   public static final String OPT_TARGET_BASE_NAME_FORMAT_PERCENT = "target-base-name-format-percent";
   public static final String OPT_END_MARGIN = "end-margin";
@@ -122,6 +129,7 @@ public class ImageWorkflowOperationHandler extends AbstractWorkflowOperationHand
    * @param composerService
    *          the composer service
    */
+  @Reference
   protected void setComposerService(ComposerService composerService) {
     this.composerService = composerService;
   }
@@ -133,6 +141,7 @@ public class ImageWorkflowOperationHandler extends AbstractWorkflowOperationHand
    * @param workspace
    *          an instance of the workspace
    */
+  @Reference
   public void setWorkspace(Workspace workspace) {
     this.workspace = workspace;
   }
@@ -142,7 +151,7 @@ public class ImageWorkflowOperationHandler extends AbstractWorkflowOperationHand
           throws WorkflowOperationException {
     logger.debug("Running image workflow operation on {}", wi);
     try {
-      final Extractor e = new Extractor(this, configure(wi.getMediaPackage(), wi.getCurrentOperation()));
+      final Extractor e = new Extractor(this, configure(wi.getMediaPackage(), wi));
       return e.main(MediaPackageSupport.copy(wi.getMediaPackage()));
     } catch (Exception e) {
       throw new WorkflowOperationException(e);
@@ -168,22 +177,16 @@ public class ImageWorkflowOperationHandler extends AbstractWorkflowOperationHand
         return handler.createResult(mp, Action.SKIP);
       }
       // start image extraction jobs
-      final List<Extraction> extractions = $(cfg.sourceTracks).bind(new Fn<Track, Stream<Extraction>>() {
-        @Override public Stream<Extraction> apply(final Track t) {
-          final List<MediaPosition> p = limit(t, cfg.positions);
-          if (p.size() != cfg.positions.size()) {
-            logger.warn("Could not apply all configured positions to track " + t);
-          } else {
-            logger.info("Extracting images from {} at position {}", t, $(p).mkString(", "));
+      final List<Extraction> extractions = cfg.sourceTracks.stream().flatMap(track -> {
+          final List<MediaPosition> positions = limit(track, cfg.positions);
+          if (positions.size() != cfg.positions.size()) {
+            logger.warn("Could not apply all configured positions to track {}", track);
           }
+          logger.info("Extracting images from {} at position {}", track, positions);
           // create one extraction per encoding profile
-          return $(cfg.profiles).map(new Fn<EncodingProfile, Extraction>() {
-            @Override public Extraction apply(EncodingProfile profile) {
-              return new Extraction(extractImages(t, profile, p), t, profile, p);
-            }
-          });
-        }
-      }).toList();
+          return cfg.profiles.stream()
+                  .map(profile -> new Extraction(extractImages(track, profile, positions), track, profile, positions));
+        }).collect(Collectors.toList());
       final List<Job> extractionJobs = concatJobs(extractions);
       final JobBarrier.Result extractionResult = JobUtil.waitForJobs(handler.serviceRegistry, extractionJobs);
       if (extractionResult.isSuccess()) {
@@ -440,7 +443,7 @@ public class ImageWorkflowOperationHandler extends AbstractWorkflowOperationHand
     private final List<Track> sourceTracks;
     private final List<MediaPosition> positions;
     private final List<EncodingProfile> profiles;
-    private final Opt<MediaPackageElementFlavor> targetImageFlavor;
+    private final List<MediaPackageElementFlavor> targetImageFlavor;
     private final List<String> targetImageTags;
     private final Opt<String> targetBaseNameFormatSecond;
     private final Opt<String> targetBaseNameFormatPercent;
@@ -449,7 +452,7 @@ public class ImageWorkflowOperationHandler extends AbstractWorkflowOperationHand
     Cfg(List<Track> sourceTracks,
         List<MediaPosition> positions,
         List<EncodingProfile> profiles,
-        Opt<MediaPackageElementFlavor> targetImageFlavor,
+        List<MediaPackageElementFlavor> targetImageFlavor,
         List<String> targetImageTags,
         Opt<String> targetBaseNameFormatSecond,
         Opt<String> targetBaseNameFormatPercent,
@@ -466,23 +469,29 @@ public class ImageWorkflowOperationHandler extends AbstractWorkflowOperationHand
   }
 
   /** Get and parse the configuration options. */
-  private Cfg configure(MediaPackage mp, WorkflowOperationInstance woi) throws WorkflowOperationException {
+  private Cfg configure(MediaPackage mp, WorkflowInstance wi) throws WorkflowOperationException {
+    WorkflowOperationInstance woi = wi.getCurrentOperation();
+    ConfiguredTagsAndFlavors tagsAndFlavors = getTagsAndFlavors(wi,
+        Configuration.many, Configuration.many, Configuration.many, Configuration.one);
     final List<EncodingProfile> profiles = getOptConfig(woi, OPT_PROFILES).toStream().bind(asList.toFn())
             .map(fetchProfile(composerService)).toList();
-    final List<String> targetImageTags = getOptConfig(woi, OPT_TARGET_TAGS).toStream().bind(asList.toFn()).toList();
-    final Opt<MediaPackageElementFlavor> targetImageFlavor =
-            getOptConfig(woi, OPT_TARGET_FLAVOR).map(MediaPackageElementFlavor.parseFlavor.toFn());
+    final List<String> targetImageTags = tagsAndFlavors.getTargetTags();
+    final List<MediaPackageElementFlavor> targetImageFlavor = tagsAndFlavors.getTargetFlavors();
     final List<Track> sourceTracks;
     {
-      // get the source flavors
-      final Stream<MediaPackageElementFlavor> sourceFlavors = getOptConfig(woi, OPT_SOURCE_FLAVORS).toStream()
-              .bind(Strings.splitCsv)
-              .append(getOptConfig(woi, OPT_SOURCE_FLAVOR))
-              .map(MediaPackageElementFlavor.parseFlavor.toFn());
       // get the source tags
-      final Stream<String> sourceTags = getOptConfig(woi, OPT_SOURCE_TAGS).toStream().bind(Strings.splitCsv);
-      // fold both into a selector
-      final TrackSelector trackSelector = sourceTags.apply(tagFold(sourceFlavors.apply(flavorFold(new TrackSelector()))));
+      final List<String> sourceTags = tagsAndFlavors.getSrcTags();
+      final List<MediaPackageElementFlavor> sourceFlavors = tagsAndFlavors.getSrcFlavors();
+      TrackSelector trackSelector = new TrackSelector();
+
+      //add tags and flavors to TrackSelector
+      for (String tag : sourceTags) {
+        trackSelector.addTag(tag);
+      }
+      for (MediaPackageElementFlavor flavor : sourceFlavors) {
+        trackSelector.addFlavor(flavor);
+      }
+
       // select the tracks based on source flavors and tags and skip those that don't have video
       sourceTracks = trackSelector.select(mp, true).stream()
           .filter(Track::hasVideo)
@@ -611,5 +620,12 @@ public class ImageWorkflowOperationHandler extends AbstractWorkflowOperationHand
       return format("MediaPosition(%s, %s)", type, position);
     }
   }
+
+  @Reference
+  @Override
+  public void setServiceRegistry(ServiceRegistry serviceRegistry) {
+    super.setServiceRegistry(serviceRegistry);
+  }
+
 }
 
